--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -43,7 +43,7 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="adminhome">
-                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Admin Home
+                    <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Admin Dashboard
             </NavLink>
         </div>
              <div class="nav-item px-3">
