--- a/Components/Pages/AdminHome.razor
+++ b/Components/Pages/AdminHome.razor
@@ -1,7 +1,7 @@
 ﻿@page "/adminHome"
 
 @inject NavigationManager navigationManager
-<h1 style="text-align:center; margin: 2rem">Home</h1>
+<h1 style="text-align:center; margin: 2rem">Admin Dashboard</h1>
 
 <div style="display:flex; flex-direction: column; gap: 2rem; justify-content: space-around; margin: 4rem;">
     <button type="button" class="btn btn-primary" @onclick="AddCategory">View Categories</button>
