--- a/Components/Pages/UpdateUser.razor
+++ b/Components/Pages/UpdateUser.razor
@@ -11,17 +11,17 @@
     <div class="col-md-6">
         <div class="mb-3">
             <label class="form-label">ID:</label>
-            <input type="text" class="form-control" @bind="user.Id" placeholder="Id" readonly />
+            <input type="text" class="form-control" @bind="user.Id" placeholder="Id"  />
             <ValidationMessage For="@(() => user.Id)" />
         </div>
         <div class="mb-3">
             <label class="form-label">First Name:</label>
-            <input type="text" class="form-control" @bind="user.FirstName" placeholder="First Name" readonly/>
+            <input type="text" class="form-control" @bind="user.FirstName" placeholder="First Name" />
             <ValidationMessage For="@(() => user.FirstName)" />
         </div>
         <div class="mb-3">
             <label class="form-label">Last Name:</label>
-            <input type="text" class="form-control" @bind="user.LastName" placeholder="Last Name" readonly />
+            <input type="text" class="form-control" @bind="user.LastName" placeholder="Last Name"  />
             <ValidationMessage For="@(() => user.LastName)" />
         </div>
         <div class="mb-3">
